# compose2pod

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: _checks.yml  release.yml
architecture/: README.md  glossary.md  supported-subset.md
compose2pod/: __init__.py  __main__.py  cli.py  configs.py  emit.py  exceptions.py  extends.py  graph.py  healthcheck.py  interpolate.py  keys.py  parsing.py  pod.py  read.py  resources.py  secrets.py  shell.py  store.py  stores.py  values.py
planning/: README.md  deferred.md
planning/audits/: 2026-07-09-compose-spec-coverage.md  2026-07-13-docs-and-gate-audit.md  2026-07-14-docker-rejection-parity.md
planning/changes/: 2026-07-08.01-service-hostname.md  2026-07-08.02-anonymous-volumes.md  2026-07-08.03-container-name.md  2026-07-08.04-named-volumes.md  2026-07-08.05-tmpfs.md  2026-07-08.06-variable-interpolation.md  2026-07-08.07-runtime-variable-interpolation.md  2026-07-09.01-env-null-passthrough.md  2026-07-09.02-reject-malformed-variable-references.md  2026-07-09.03-core-process-identity-service-keys.md  2026-07-09.04-container-confinement-service-keys.md  2026-07-09.05-ignore-stop-lifecycle-keys.md  2026-07-09.06-image-host-device-metadata-service-keys.md  2026-07-09.07-ulimits-service-key.md  2026-07-09.08-service-key-registry.md  2026-07-10.01-validate-owns-emit-shapes.md  2026-07-10.02-secrets.md  2026-07-10.03-configs.md  2026-07-10.04-profiles.md  2026-07-11.01-extends.md  2026-07-11.02-resource-limits.md  2026-07-11.03-pod-dns-sysctls.md  2026-07-12.01-validate-pod-name-in-emit.md  2026-07-12.02-collapse-store-cluster.md  2026-07-12.03-one-script-plan.md  2026-07-12.04-integration-harness.md  2026-07-13.01-pod-level-add-host.md  2026-07-13.02-grow-integration-scenarios.md  2026-07-13.03-grow-integration-scenarios-env.md  2026-07-13.04-grow-integration-scenarios-aliases-depends-on.md  2026-07-13.05-derive-extends-merge-policy-from-keyspec.md  2026-07-13.06-podman-version-guard.md  2026-07-13.07-public-keys-primitives.md  2026-07-13.08-public-run-tokens.md  2026-07-13.09-uniform-flag-composition.md  2026-07-13.10-close-structural-key-gate.md  2026-07-14.01-compact-supported-subset.md  2026-07-14.02-add-host-closure-scope.md  2026-07-14.03-extends-keys-dedup.md  2026-07-14.04-healthy-gating-flake.md  (+35 more)
planning/decisions/: 2026-07-03-healthcheck-start-period-retries-passthrough.md  2026-07-03-zero-dependency-core.md  2026-07-09-reject-namespace-network-keys.md  2026-07-09-stop-lifecycle-keys-inert.md  (+9 more)
tests/: conftest.py  test_cli.py  test_configs.py  test_emit.py  test_extends.py  test_graph.py  test_healthcheck.py  test_interpolate.py  test_keys.py  test_parsing.py  test_pod.py  test_read.py  test_resources.py  test_secrets.py  test_shell.py  test_store.py  test_stores.py  test_values.py
(+114 files in other folders)
